# watcher-claude-usage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
docs/specs/: 01-REQUIREMENTS.md  02-DESIGN.md  03-API-REFERENCE.md  04-HARDWARE-AND-FLASHING.md  05-IMPLEMENTATION-PLAN.md  06-LVGL-SCREENSHOT.md  07-UI-REDESIGN.md  SPEC.md
main/: CMakeLists.txt  claude_status.c  claude_status.h  claude_usage.c  claude_usage.h  config.c  config.h  font_ext_16.c  font_ext_22.c  http_get.c  http_get.h  icons_lucide.c  icons_lucide.h  idf_component.yml  main.c  provisioning.c  provisioning.h  screenshot.c  screenshot.h  secrets.h.template  secure_store.c  secure_store.h  speak.c  speak.h  speak_clips.c  speak_clips.h  splash.c  splash.h  ui.c  ui.h  wifi_connect.c  wifi_connect.h
tools/: grab_screens.py
tools/audio/: gen_clips.ps1  wav_to_c.py
tools/icontool/: gen_icons.mjs  package-lock.json  package.json
